Adding the option comboBox with option-based tooltips

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -3,6 +3,16 @@
 ## General Personnel Resources
 
 ## Enums
+# BabySurnameStyle Enum
+BabySurnameStyle.FATHERS.text=Fathers
+BabySurnameStyle.FATHERS.toolTipText=The baby will use the father's surname, or the mother's surname if there is no father
+BabySurnameStyle.MOTHERS.text=Mothers
+BabySurnameStyle.MOTHERS.toolTipText=The baby will use the mother's surname
+BabySurnameStyle.WELSH_PATRONYMICS.text=Welsh Patronymics
+BabySurnameStyle.WELSH_PATRONYMICS.toolTipText=The baby will use a Welsh patronymic surname (e.g. ap Gwythyr, ab Owain), or a Welsh matronymic surname if there is no father
+BabySurnameStyle.WELSH_MATRONYMICS.text=Welsh Matronymics
+BabySurnameStyle.WELSH_MATRONYMICS.toolTipText=The baby will use a Welsh matronymic surname (e.g. ferch Alwen)
+
 # BodyLocation Enum
 BodyLocation.HEAD.text=Head
 BodyLocation.CHEST.text=Chest
