--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -147,10 +147,8 @@ chanceProcreationNoRelationship.toolTipText=This is the percent chance per day t
 displayTrueDueDate.text=Display true due date
 displayTrueDueDate.toolTipText=This displays the actual date the baby will be delivered on the mother's personnel sheet instead of an estimated due date.
 logConception.text=Log Conception and Birth in Personnel and Medical Logs:
-babySurnameStyle.text=Which parent's surname should the baby take:
-babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
-babySurnameStyle.Mother=Mother
-babySurnameStyle.Father=Father
+babySurnameStyle.text=Baby Surname Style:
+babySurnameStyle.toolTipText=This is the style for how a baby's surname will be selected.
 useParentage.text=Display children in the person panel
 displayFamilyLevel.text=The level of relation to be displayed:
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
