Adding Prisoner Defector

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -44,6 +44,7 @@ PersonnelStatus.MIA.text=Missing in Action
 # PrisonerStatus Enum
 PrisonerStatus.FREE.text=Free
 PrisonerStatus.PRISONER.text=Prisoner
+PrisonerStatus.PRISONER_DEFECTOR.text=Prisoner (willing to defect)
 PrisonerStatus.BONDSMAN.text=Bondsman
 
 ## Generators
