Fixing Welsh surnames and adding Icelandic generation styles

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -9,9 +9,15 @@ BabySurnameStyle.FATHERS.toolTipText=The baby will use the father's surname, or 
 BabySurnameStyle.MOTHERS.text=Mothers
 BabySurnameStyle.MOTHERS.toolTipText=The baby will use the mother's surname
 BabySurnameStyle.WELSH_PATRONYMICS.text=Welsh Patronymics
-BabySurnameStyle.WELSH_PATRONYMICS.toolTipText=The baby will use a Welsh patronymic surname (e.g. ap Gwythyr, ab Owain), or a Welsh matronymic surname if there is no father
+BabySurnameStyle.WELSH_PATRONYMICS.toolTipText=The baby will use a Welsh patronymic surname (e.g. ap Gwythyr, ab Owain, ferch Owain), or a Welsh matronymic surname if there is no father
 BabySurnameStyle.WELSH_MATRONYMICS.text=Welsh Matronymics
-BabySurnameStyle.WELSH_MATRONYMICS.toolTipText=The baby will use a Welsh matronymic surname (e.g. ferch Alwen)
+BabySurnameStyle.WELSH_MATRONYMICS.toolTipText=The baby will use a Welsh matronymic surname (e.g. ap Gwynn, ab Alwen, ferch Alwen)
+BabySurnameStyle.ICELANDIC_PATRONYMICS.text=Icelandic Patronymics
+BabySurnameStyle.ICELANDIC_PATRONYMICS.toolTipText=The baby will use an Icelandic patronymic surname (e.g. Georgsson, Georgsd\u00F3ttir), or an Icelandic matronymic surname if there is no father.
+BabySurnameStyle.ICELANDIC_MATRONYMICS.text=Icelandic Matronymics
+BabySurnameStyle.ICELANDIC_MATRONYMICS.toolTipText=The baby will use an Icelandic matronymic surname (e.g. Gu\u00F0r\u00FAnsson, Gu\u00F0r\u00FAnd\u00F3ttir)
+BabySurnameStyle.ICELANDIC_COMBINATION_NYMICS.text=Icelandic Combined Nymics
+BabySurnameStyle.ICELANDIC_COMBINATION_NYMICS.toolTipText=The baby will use an Icelandic matronymic surname followed by an Icelandic patronymic surname, or an Icelandic matronymic surname if there is no father.
 
 # BodyLocation Enum
 BodyLocation.HEAD.text=Head
