--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -93,7 +93,7 @@ useImplantsBox.text=Allow Implants
 useImplantsBox.toolTipText=Allow personnel to have implants (e.g. Manei Domini)
 chkCapturePrisoners.text=Capture Prisoners in Scenarios
 chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
-prisonerStatus.text=Default Prisoner Status:
+prisonerStatus.text=Default Prisoner Status
 prisonerStatus.Prisoner=Prisoner
 prisonerStatus.Bondsman=Bondsman
 altQualityAveragingCheckBox.text=Use higher-precision skill level averaging
@@ -120,39 +120,39 @@ randomizeDependentsOrigin.text=Randomize Origin for Dependents
 originSearchRadius.text=Random Origin Search Radius
 #family
 FamilyTab.text=Family Options
-minimumMarriageAge.text=Minimum age for marriages:
+minimumMarriageAge.text=Minimum age for marriages
 minimumMarriageAge.toolTipText=This is the minimum age that is allowed for a person to be married.
-checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
+checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useRandomMarriages.text=Use random marriages (Unofficial)
 useRandomMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting members of your force.
-chanceRandomMarriages.text=Percent chance of a fitting person finding a spouse per day:
+chanceRandomMarriages.text=Percent chance of a fitting person finding a spouse per day
 chanceRandomMarriages.toolTipText=This is the percent chance that a fitting member of your force will marry another fitting member of your force of the opposite sex.
-marriageAgeRange.text=Age Range for Random Marriages:
+marriageAgeRange.text=Age Range for Random Marriages
 marriageAgeRange.toolTipText=This plus/minus the age forms the possible range of ages for spouses in the forming of a random marriage.
 randomMarriageSurnameWeights.text=Random Marriage Surname Weights
 randomMarriageSurnameWeights.toolTipText=These are the weights used in determining the surname change, if any, when a random marriage occurs. \nThey will be the percent chance if the values for the weights all add up to 100.
 useRandomSameSexMarriages.text=Use random same sex marriages (Unofficial)
 useRandomSameSexMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting same sex members of your force.
-chanceRandomSameSexMarriages.text=Percent chance of a fitting person finding a same sex spouse per day:
+chanceRandomSameSexMarriages.text=Percent chance of a fitting person finding a same sex spouse per day
 chanceRandomSameSexMarriages.toolTipText=This is the percent chance that a fitting member of your force will marry another fitting member of your force of the same sex
 useUnofficialProcreation.text=Use procreation (Unofficial)
 useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
-chanceProcreation.text=Percent chance of a fitting female procreating per day:
+chanceProcreation.text=Percent chance of a fitting female procreating per day
 chanceProcreation.toolTipText=This is the percent chance per day that a female member of your force in a relationship will have a baby when not deployed.
 useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
-chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship):
+chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship)
 chanceProcreationNoRelationship.toolTipText=This is the percent chance per day that a female member of your force not in a relationship will have a baby when not deployed.
 displayTrueDueDate.text=Display true due date
 displayTrueDueDate.toolTipText=This displays the actual date the baby will be delivered on the mother's personnel sheet instead of an estimated due date.
-logConception.text=Log Conception and Birth in Personnel and Medical Logs:
-babySurnameStyle.text=Which parent's surname should the baby take:
+logConception.text=Log Conception and Birth in Personnel and Medical Logs
+babySurnameStyle.text=Which parent's surname should the baby take
 babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
 babySurnameStyle.Mother=Mother
 babySurnameStyle.Father=Father
 useParentage.text=Display children in the person panel
-displayFamilyLevel.text=The level of relation to be displayed:
+displayFamilyLevel.text=The level of relation to be displayed
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
