--- a/.github/workflows/nightly-maven-ci.yml
+++ b/.github/workflows/nightly-maven-ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os:   [ubuntu-latest, windows-latest]
-        java: 8
+        java: [8]
 
     runs-on: ${{ matrix.os }}
 
