--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -45,35 +45,30 @@ MarriageSurnameStyle.YOURS.dropDownText=Spouse takes your surname
 MarriageSurnameStyle.SPOUSE.text=Spouse
 MarriageSurnameStyle.SPOUSE.toolTipText=
 MarriageSurnameStyle.SPOUSE.dropDownText=Take spouse's surname
-
-MarriageSurnameStyle.SPACE_YOURS.text=Yours Spouse
+MarriageSurnameStyle.SPACE_YOURS.text=Spouse Yours
 MarriageSurnameStyle.SPACE_YOURS.toolTipText=
-MarriageSurnameStyle.SPACE_YOURS.dropDownText=Add your spouse's surname
-MarriageSurnameStyle.BOTH_SPACE_YOURS.text=Both Yours Spouse
+MarriageSurnameStyle.SPACE_YOURS.dropDownText=Spouse adds your surname to theirs (Spouse Yours)
+MarriageSurnameStyle.BOTH_SPACE_YOURS.text=Both Spouse Yours
 MarriageSurnameStyle.BOTH_SPACE_YOURS.toolTipText=
-MarriageSurnameStyle.BOTH_SPACE_YOURS.dropDownText=Both add your surname to your spouse's (Yours Spouse)
-
-MarriageSurnameStyle.HYP_YOURS.text=Yours-Spouse
+MarriageSurnameStyle.BOTH_SPACE_YOURS.dropDownText=Both add your spouse's surname to yours (Spouse Yours)
+MarriageSurnameStyle.HYP_YOURS.text=Spouse-Yours
 MarriageSurnameStyle.HYP_YOURS.toolTipText=
-MarriageSurnameStyle.HYP_YOURS.dropDownText=Hyphenate your surname with spouse's (Yours-Spouse)
-MarriageSurnameStyle.BOTH_HYP_YOURS.text=Both Yours-Spouse
+MarriageSurnameStyle.HYP_YOURS.dropDownText=Spouse hyphenates surname with yours (Spouse-Yours)
+MarriageSurnameStyle.BOTH_HYP_YOURS.text=Both Spouse-Yours
 MarriageSurnameStyle.BOTH_HYP_YOURS.toolTipText=
-MarriageSurnameStyle.BOTH_HYP_YOURS.dropDownText=Both hyphenate your surname with your spouse's (Yours-Spouse)
-
-MarriageSurnameStyle.SPACE_SPOUSE.text=Spouse Yours
+MarriageSurnameStyle.BOTH_HYP_YOURS.dropDownText=Both hyphenate your spouse's surname with yours (Spouse-Yours)
+MarriageSurnameStyle.SPACE_SPOUSE.text=Yours Spouse
 MarriageSurnameStyle.SPACE_SPOUSE.toolTipText=
-MarriageSurnameStyle.SPACE_SPOUSE.dropDownText=Spouse adds your surname to theirs (Spouse Yours)
-MarriageSurnameStyle.BOTH_SPACE_SPOUSE.text=Both Spouse Yours
+MarriageSurnameStyle.SPACE_SPOUSE.dropDownText=Add your spouse's surname to yours (Yours Spouse's)
+MarriageSurnameStyle.BOTH_SPACE_SPOUSE.text=Both Yours Spouse
 MarriageSurnameStyle.BOTH_SPACE_SPOUSE.toolTipText=
-MarriageSurnameStyle.BOTH_SPACE_SPOUSE.dropDownText=Both add your spouse's surname to yours (Spouse Yours)
-
-MarriageSurnameStyle.HYP_SPOUSE.text=Spouse-Yours
+MarriageSurnameStyle.BOTH_SPACE_SPOUSE.dropDownText=Both add your surname to your spouse's (Yours Spouse)
+MarriageSurnameStyle.HYP_SPOUSE.text=Yours-Spouse
 MarriageSurnameStyle.HYP_SPOUSE.toolTipText=
-MarriageSurnameStyle.HYP_SPOUSE.dropDownText=Spouse hyphenates surname with yours (Spouse-Yours)
-MarriageSurnameStyle.BOTH_HYP_SPOUSE.text=Both Spouse-Yours
+MarriageSurnameStyle.HYP_SPOUSE.dropDownText=Hyphenate your surname with spouse's (Yours-Spouse)
+MarriageSurnameStyle.BOTH_HYP_SPOUSE.text=Both Yours-Spouse
 MarriageSurnameStyle.BOTH_HYP_SPOUSE.toolTipText=
-MarriageSurnameStyle.BOTH_HYP_SPOUSE.dropDownText=Both hyphenate your spouse's surname with yours (Spouse-Yours)
-
+MarriageSurnameStyle.BOTH_HYP_SPOUSE.dropDownText=Both hyphenate your surname with your spouse's (Yours-Spouse)
 MarriageSurnameStyle.MALE.text=Male
 MarriageSurnameStyle.MALE.toolTipText=
 MarriageSurnameStyle.MALE.dropDownText=Both share the male spouse's surname (selected person for same sex)
