Adding half-siblings and a key list for any sibling enum values

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -41,6 +41,9 @@ FamilialRelationshipType.PARENT.OTHER.text=Parent
 FamilialRelationshipType.SIBLING.MALE.text=Brother
 FamilialRelationshipType.SIBLING.FEMALE.text=Sister
 FamilialRelationshipType.SIBLING.OTHER.text=Sibling
+FamilialRelationshipType.HALF_SIBLING.MALE.text=Half Brother
+FamilialRelationshipType.HALF_SIBLING.FEMALE.text=Half Sister
+FamilialRelationshipType.HALF_SIBLING.OTHER.text=Half Sibling
 FamilialRelationshipType.CHILD.MALE.text=Son
 FamilialRelationshipType.CHILD.FEMALE.text=Daughter
 FamilialRelationshipType.CHILD.OTHER.text=Child
