Implementing the Manei Domini Class Enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -35,6 +35,16 @@ GenderDescriptors.THEIRS.text=theirs
 GenderDescriptors.BOY.text=boy
 GenderDescriptors.GIRL.text=girl
 
+# ManeiDominiClass Enum
+ManeiDominiClass.NONE.text=None
+ManeiDominiClass.GHOST.text=Ghost
+ManeiDominiClass.WRAITH.text=Wraith
+ManeiDominiClass.BANSHEE.text=Banshee
+ManeiDominiClass.ZOMBIE.text=Zombie
+ManeiDominiClass.PHANTOM.text=Phantom
+ManeiDominiClass.SPECTER.text=Specter
+ManeiDominiClass.POLTERGEIST.text=Poltergeist
+
 # PersonnelStatus Enum
 PersonnelStatus.ACTIVE.text=Active
 PersonnelStatus.RETIRED.text=Retired
