Fixing localization based on usage

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -42,7 +42,7 @@ PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
 
 # ROMDesignations Enum
-ROMDesignations.NONE.text=None
+ROMDesignations.NONE.text=None (Automatically Set)
 ROMDesignations.EPSILON.text=Epsilon
 ROMDesignations.PI.text=Pi
 ROMDesignations.IOTA.text=Iota
