Adding All Role and No Role options for portraits

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -240,6 +240,8 @@ lblSkillElite.text=Elite Level:
 lblTechLevel.text=Maximum Tech Level:
 lblOverallRecruitBonus.text=Overall Recruitment Bonus
 panTypeRecruitBonus.title=Personnel Type Recruitment Bonus
+panUsePortrait.all.text=All Roles
+panUsePortrait.no.text=No Roles
 txtPortraitInst.text=Checked personnel types will have a random portrait selected for them upon creation. In order to use random portraits, you must place images in the data/images/portraits/Male and data/images/portraits/Female folders.
 panRandomPortrait.title=Portrait Generation
 chkExtraRandom.text=Extra Randomness
