Adding the option to log marriage name changes

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -124,6 +124,8 @@ minimumMarriageAge.text=Minimum age for marriages
 minimumMarriageAge.toolTipText=This is the minimum age that is allowed for a person to be married.
 checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
+logMarriageNameChange.text=Log Marriage Name Changes
+logMarriageNameChange.toolTipText=This enables the addition of a personnel log entry whenever a name is changed during marriage.
 useRandomMarriages.text=Use random marriages (Unofficial)
 useRandomMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting members of your force.
 chanceRandomMarriages.text=Percent chance of a fitting person finding a spouse per day
