Adding financial Year duration option properly

--- a/MekHQ/resources/mekhq/resources/Finances.properties
+++ b/MekHQ/resources/mekhq/resources/Finances.properties
@@ -8,31 +8,19 @@ NotImplemented.text="<font color='red'><b>You cannot afford to pay %s!</b></font
 AssetPayment.text="Your account has been credited for %s from %s "
 
 ## Finances Enums
-# Finances Reset Duration
-FinancesResetDuration.DAILY.text=Daily
-FinancesResetDuration.DAILY.toolTipText=Reset on new day
-FinancesResetDuration.WEEKLY.text=Weekly
-FinancesResetDuration.WEEKLY.toolTipText=Reset every week
-FinancesResetDuration.MONTHLY.text=Monthly
-FinancesResetDuration.MONTHLY.toolTipText=Reset every month
-FinancesResetDuration.SEMIANNUALLY.text=Semiannually
-FinancesResetDuration.SEMIANNUALLY.toolTipText=Reset every six months
-FinancesResetDuration.ANNUALLY.text=Annually
-FinancesResetDuration.ANNUALLY.toolTipText=Reset yearly
-FinancesResetDuration.BIANNUALLY.text=Biannually
-FinancesResetDuration.BIANNUALLY.toolTipText=Reset once every 2 years
-FinancesResetDuration.QUINQUENNIALLY.text=Quinquennially
-FinancesResetDuration.QUINQUENNIALLY.toolTipText=Reset once every 5 years
-FinancesResetDuration.DECENNIALLY.text=Decennially
-FinancesResetDuration.DECENNIALLY.toolTipText=Reset once every 10 years
-FinancesResetDuration.QUADRANSCENTENNIALLY.text=Quadranscentennially
-FinancesResetDuration.QUADRANSCENTENNIALLY.toolTipText=Reset once every 25 years
-FinancesResetDuration.CENTENARY.text=Centenary
-FinancesResetDuration.CENTENARY.toolTipText=Reset once every century
-FinancesResetDuration.SESQUICENTENNIALLY.text=Sesquicentennially
-FinancesResetDuration.SESQUICENTENNIALLY.toolTipText=Reset once every 150 years after the year 2000
-FinancesResetDuration.NEVER.text=Never
-FinancesResetDuration.NEVER.toolTipText=Never reset the Finances table
+# FinancialYearDuration Enum
+FinancialYearDuration.SEMIANNUAL.text=Semiannual
+FinancialYearDuration.SEMIANNUAL.toolTipText=The financial year lasts six months
+FinancialYearDuration.ANNUAL.text=Annual
+FinancialYearDuration.ANNUAL.toolTipText=The financial year lasts one yearl
+FinancialYearDuration.BIANNUAL.text=Biannual
+FinancialYearDuration.BIANNUAL.toolTipText=The financial year lasts two years
+FinancialYearDuration.QUINQUENNIAL.text=Quinquennial
+FinancialYearDuration.QUINQUENNIAL.toolTipText=The financial year lasts five years
+FinancialYearDuration.DECENNIAL.text=Decennial
+FinancialYearDuration.DECENNIAL.toolTipText=The financial year lasts ten years
+FinancialYearDuration.FOREVER.text=Forever
+FinancialYearDuration.FOREVER.toolTipText=The financial year lasts forever
 
 ## Finances Files
 # Peacetime Operating Costs
