--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -37,46 +37,46 @@ GenderDescriptors.GIRL.text=girl
 
 # Marriage Enum
 MarriageSurnameStyle.NO_CHANGE.text=No Change
-MarriageSurnameStyle.NO_CHANGE.toolTipText=
+MarriageSurnameStyle.NO_CHANGE.toolTipText=Neither you nor your spouse change their surname
 MarriageSurnameStyle.NO_CHANGE.dropDownText=No name change
 MarriageSurnameStyle.YOURS.text=Yours
-MarriageSurnameStyle.YOURS.toolTipText=
+MarriageSurnameStyle.YOURS.toolTipText=Your spouse takes your surname
 MarriageSurnameStyle.YOURS.dropDownText=Spouse takes your surname
 MarriageSurnameStyle.SPOUSE.text=Spouse
-MarriageSurnameStyle.SPOUSE.toolTipText=
+MarriageSurnameStyle.SPOUSE.toolTipText=You take your spouse's surname
 MarriageSurnameStyle.SPOUSE.dropDownText=Take spouse's surname
 MarriageSurnameStyle.SPACE_YOURS.text=Spouse Yours
-MarriageSurnameStyle.SPACE_YOURS.toolTipText=
-MarriageSurnameStyle.SPACE_YOURS.dropDownText=Spouse adds your surname to theirs (Spouse Yours)
+MarriageSurnameStyle.SPACE_YOURS.toolTipText=Your spouse adds their surname to yours, in the format of Spouse Yours
+MarriageSurnameStyle.SPACE_YOURS.dropDownText=Spouse adds their surname to yours (Spouse Yours)
 MarriageSurnameStyle.BOTH_SPACE_YOURS.text=Both Spouse Yours
-MarriageSurnameStyle.BOTH_SPACE_YOURS.toolTipText=
+MarriageSurnameStyle.BOTH_SPACE_YOURS.toolTipText=You and your spouse both add their surname to yours, in the format of Spouse Yours
 MarriageSurnameStyle.BOTH_SPACE_YOURS.dropDownText=Both add your spouse's surname to yours (Spouse Yours)
 MarriageSurnameStyle.HYP_YOURS.text=Spouse-Yours
-MarriageSurnameStyle.HYP_YOURS.toolTipText=
+MarriageSurnameStyle.HYP_YOURS.toolTipText=Your spouse hyphenates their surname with yours, in the format of Spouse-Yours
 MarriageSurnameStyle.HYP_YOURS.dropDownText=Spouse hyphenates surname with yours (Spouse-Yours)
 MarriageSurnameStyle.BOTH_HYP_YOURS.text=Both Spouse-Yours
-MarriageSurnameStyle.BOTH_HYP_YOURS.toolTipText=
+MarriageSurnameStyle.BOTH_HYP_YOURS.toolTipText=You and your spouse both hyphenate their surname with yours, in the format of Spouse-Yours
 MarriageSurnameStyle.BOTH_HYP_YOURS.dropDownText=Both hyphenate your spouse's surname with yours (Spouse-Yours)
 MarriageSurnameStyle.SPACE_SPOUSE.text=Yours Spouse
-MarriageSurnameStyle.SPACE_SPOUSE.toolTipText=
-MarriageSurnameStyle.SPACE_SPOUSE.dropDownText=Add your spouse's surname to yours (Yours Spouse's)
+MarriageSurnameStyle.SPACE_SPOUSE.toolTipText=You add your surname to your spouse's, in the format of Yours Spouse
+MarriageSurnameStyle.SPACE_SPOUSE.dropDownText=Add your surname to your spouse's (Yours Spouse's)
 MarriageSurnameStyle.BOTH_SPACE_SPOUSE.text=Both Yours Spouse
-MarriageSurnameStyle.BOTH_SPACE_SPOUSE.toolTipText=
+MarriageSurnameStyle.BOTH_SPACE_SPOUSE.toolTipText=You and your spouse both add your surname to theirs, in the format of Yours Spouse
 MarriageSurnameStyle.BOTH_SPACE_SPOUSE.dropDownText=Both add your surname to your spouse's (Yours Spouse)
 MarriageSurnameStyle.HYP_SPOUSE.text=Yours-Spouse
-MarriageSurnameStyle.HYP_SPOUSE.toolTipText=
+MarriageSurnameStyle.HYP_SPOUSE.toolTipText=You hyphenate your surname with your spouse's, in the format of Yours-Spouse
 MarriageSurnameStyle.HYP_SPOUSE.dropDownText=Hyphenate your surname with spouse's (Yours-Spouse)
 MarriageSurnameStyle.BOTH_HYP_SPOUSE.text=Both Yours-Spouse
-MarriageSurnameStyle.BOTH_HYP_SPOUSE.toolTipText=
+MarriageSurnameStyle.BOTH_HYP_SPOUSE.toolTipText=You and your spouse both hyphenate your surname with theirs, in the format of Yours-Spouse
 MarriageSurnameStyle.BOTH_HYP_SPOUSE.dropDownText=Both hyphenate your surname with your spouse's (Yours-Spouse)
 MarriageSurnameStyle.MALE.text=Male
-MarriageSurnameStyle.MALE.toolTipText=
+MarriageSurnameStyle.MALE.toolTipText=You and your spouse take the male member's surname, or yours for same sex couples
 MarriageSurnameStyle.MALE.dropDownText=Both share the male spouse's surname (selected person for same sex)
 MarriageSurnameStyle.FEMALE.text=Female
-MarriageSurnameStyle.FEMALE.toolTipText=
+MarriageSurnameStyle.FEMALE.toolTipText=You and your spouse take the female member's surname, or yours for same sex couples
 MarriageSurnameStyle.FEMALE.dropDownText=Both share the female spouse's surname (selected person for same sex)
 MarriageSurnameStyle.WEIGHTED.text=Weighted
-MarriageSurnameStyle.WEIGHTED.toolTipText=
+MarriageSurnameStyle.WEIGHTED.toolTipText=The surname style used will be randomly determined through set weights
 MarriageSurnameStyle.WEIGHTED.dropDownText=Surname style randomly determined through set weights
 
 # PersonnelStatus Enum
