Making changes to swap from the honorific field to pre-nominal and post-nominal

--- a/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
@@ -1,11 +1,12 @@
 col_rank.text=Rank
+col_pre_nominal.text=Pre-Nominal
 col_given_name.text=Given Name
 col_surname.text=Surname
 surname_soldiers.text= soldiers)
 surname_crew.text= crew)
-col_honorific.text=Honorific
-col_call.text=Callsign
 col_bloodname.text=Bloodname
+col_post_nominal.text=Post-Nominal
+col_call.text=Callsign
 col_age.text=Age
 col_gender.text=Gender
 col_type.text=Role
