Initial work to add the Time in Rank and Time in Service Display Formats

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -41,6 +41,11 @@ PersonnelStatus.RETIRED.text=Retired
 PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
 
+# TimeInDisplayFormat Enum
+Time.YearYears=year(s)
+Time.MonthMonths=month(s)
+Time.DayDays=day(s)
+
 ## Generators
 
 ## Personnel Classes
