--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -153,8 +153,8 @@ babySurnameStyle.text=Which parent's surname should the baby take
 babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
 babySurnameStyle.Mother=Mother
 babySurnameStyle.Father=Father
-useParentage.text=Display children in the person panel
-displayFamilyLevel.text=The level of relation to be displayed
+displayParentage.text=Expanded Family Display in the Personnel Panel
+displayFamilyLevel.text=The level of extended relation to be displayed
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
