--- a/MekHQ/resources/mekhq/resources/Finances.properties
+++ b/MekHQ/resources/mekhq/resources/Finances.properties
@@ -12,7 +12,7 @@ AssetPayment.text="Your account has been credited for %s from %s "
 FinancialYearDuration.SEMIANNUAL.text=Semiannual
 FinancialYearDuration.SEMIANNUAL.toolTipText=The financial year lasts six months
 FinancialYearDuration.ANNUAL.text=Annual
-FinancialYearDuration.ANNUAL.toolTipText=The financial year lasts one yearl
+FinancialYearDuration.ANNUAL.toolTipText=The financial year lasts one year
 FinancialYearDuration.BIANNUAL.text=Biannual
 FinancialYearDuration.BIANNUAL.toolTipText=The financial year lasts two years
 FinancialYearDuration.QUINQUENNIAL.text=Quinquennial
