Adding warning for the forever duration

--- a/MekHQ/resources/mekhq/resources/Finances.properties
+++ b/MekHQ/resources/mekhq/resources/Finances.properties
@@ -19,8 +19,8 @@ FinancialYearDuration.QUINQUENNIAL.text=Quinquennial
 FinancialYearDuration.QUINQUENNIAL.toolTipText=The financial year lasts five years
 FinancialYearDuration.DECENNIAL.text=Decennial
 FinancialYearDuration.DECENNIAL.toolTipText=The financial year lasts ten years
-FinancialYearDuration.FOREVER.text=Forever
-FinancialYearDuration.FOREVER.toolTipText=The financial year lasts forever
+FinancialYearDuration.FOREVER.text=Forever (Not Recommended)
+FinancialYearDuration.FOREVER.toolTipText=The financial year lasts forever. This option is not recommended and can cause issues in lengthy campaigns.
 
 ## Finances Files
 # Peacetime Operating Costs
