--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -153,6 +153,8 @@ babySurnameStyle.text=Which parent's surname should the baby take
 babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
 babySurnameStyle.Mother=Mother
 babySurnameStyle.Father=Father
+determineFatherAtBirth.text=Determine Father at Birth instead of Conception
+determineFatherAtBirth.toolTipText=<html>The father of a child will be determined based on the spouse at the birth of the child, followed by the spouse at time of conception, followed by nobody. <br>This is opposed to just using the spouse, if any, at the time of conception.</html>
 displayParentage.text=Expanded Family Display in the Personnel Panel
 displayFamilyLevel.text=The level of extended relation to be displayed
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
