Finishing the implementation of Time in Rank and Time in Service display format options

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -111,7 +111,9 @@ useTougherHealing.text=Tougher Healing
 useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
 useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
 useTimeInService.text=Track Time In Service
+timeInServiceDisplayFormat.text=Display format for Time in Service
 useTimeInRank.text=Track Time In Rank
+timeInRankDisplayFormat.text=Display format for Time in Rank
 trackTotalEarnings.text=Track Total Earnings
 trackTotalEarnings.toolTipText=This tracks the total amount earned by personnel. The tracking is only done when this option is enabled, and it is not backfilled.
 showOriginFaction.text=Show Origin Faction
