--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -42,9 +42,16 @@ PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
 
 # TimeInDisplayFormat Enum
-Time.YearYears=year(s)
-Time.MonthMonths=month(s)
-Time.DayDays=day(s)
+TimeInDisplayFormat.DAYS.text=Day(s)
+TimeInDisplayFormat.DAYS.displayFormat=%d day(s)
+TimeInDisplayFormat.WEEKS.text=Week(s)
+TimeInDisplayFormat.WEEKS.displayFormat=%d week(s)
+TimeInDisplayFormat.MONTHS.text=Month(s)
+TimeInDisplayFormat.MONTHS.displayFormat=%d month(s)
+TimeInDisplayFormat.MONTHS_YEARS.text=Month(s) and Year(s)
+TimeInDisplayFormat.MONTHS_YEARS.displayFormat=%d month(s) and %d year(s)
+TimeInDisplayFormat.YEARS.text=Year(s)
+TimeInDisplayFormat.YEARS.displayFormat=%d year(s)
 
 ## Generators
 
