Finishing MekHQ name generation changes and renaming option for its new use

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -71,8 +71,8 @@ usePlanetaryAcquisitions.toolTipText=<html>Supplies will be searched for on spec
 usePlanetaryAcquisitionsVerbose.text=Use verbose reporting for planet-based acquisitions.
 usePlanetaryAcquisitionsVerbose.toolTipText=If checked, you will see all the details of the planetary search. Usually TMI, but good for testing and understanding how it works.
 chkUseFinances.text=Use Finances
-useFactionForNamesBox.text=Use chosen faction for assigned names
-useFactionForNamesBox.toolTipText=Automatically assigns random name generator based on overall faction selection
+chkUseOriginFactionForNames.text=Use origin faction for assigned names
+chkUseOriginFactionForNames.toolTipText=The random name generator uses the person's origin faction to assign their name.
 #Personnel Tab
 panPersonnel.TabConstraints.tabTitle=Personnel
 useTacticsBox.text=Use Tactics Skill as Commander Initiative Bonus
