Properly implementing migration, and four more styles of baby surname

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -8,6 +8,14 @@ BabySurnameStyle.FATHERS.text=Fathers
 BabySurnameStyle.FATHERS.toolTipText=The baby will use the father's surname, or the mother's surname if there is no father
 BabySurnameStyle.MOTHERS.text=Mothers
 BabySurnameStyle.MOTHERS.toolTipText=The baby will use the mother's surname
+BabySurnameStyle.MOTHERS_FATHERS.text=Mothers Fathers
+BabySurnameStyle.MOTHERS_FATHERS.toolTipText=The baby will use a surname made of their mother's surname followed by the father's surname
+BabySurnameStyle.MOTHERS_HYP_FATHERS.text=Mothers-Fathers
+BabySurnameStyle.MOTHERS_HYP_FATHERS.toolTipText=The baby will use a surname made of their mother's surname hyphenated to the father's surname
+BabySurnameStyle.FATHERS_MOTHERS.text=Fathers Mothers
+BabySurnameStyle.FATHERS_MOTHERS.toolTipText=The baby will use a surname made of their father's surname followed by the mother's surname
+BabySurnameStyle.FATHERS_HYP_MOTHERS.text=Fathers-Mothers
+BabySurnameStyle.FATHERS_HYP_MOTHERS.toolTipText=The baby will use a surname made of their father's surname hyphenated to the mother's surname
 BabySurnameStyle.WELSH_PATRONYMICS.text=Welsh Patronymics
 BabySurnameStyle.WELSH_PATRONYMICS.toolTipText=The baby will use a Welsh patronymic surname (e.g. ap Gwythyr, ab Owain, ferch Owain), or a Welsh matronymic surname if there is no father
 BabySurnameStyle.WELSH_MATRONYMICS.text=Welsh Matronymics
