Creating initial Phenotype Enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -41,6 +41,24 @@ PersonnelStatus.RETIRED.text=Retired
 PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
 
+# Phenotype Enum
+Phenotype.MECHWARRIOR.text=MechWarrior
+Phenotype.MECHWARRIOR.toolTipText=Probability of a trueborn person with appropriate bonuses for MechWarriors. Does not apply to non-clan factions.
+Phenotype.ELEMENTAL.text=Elemental
+Phenotype.ELEMENTAL.toolTipText=Probability of a trueborn person with appropriate bonuses for Elementals. Does not apply to non-clan factions.
+Phenotype.AEROSPACE.text=Aerospace
+Phenotype.AEROSPACE.toolTipText=Probability of a trueborn person with appropriate bonuses for Aerospace crews. Does not apply to non-clan factions.
+Phenotype.VEHICLE.text=Vehicle
+Phenotype.VEHICLE.toolTipText=Probability of a trueborn person with appropriate bonuses for Vehicle crews. This only applies to Clan Hell's Horses.
+Phenotype.PROTOMECH.text=ProtoMech
+Phenotype.PROTOMECH.toolTipText=Probability of a trueborn person with appropriate bonuses for ProtoMech crews. Does not apply to non-clan factions, nor clans before 3060.
+Phenotype.NAVAL.text=Naval
+Phenotype.NAVAL.toolTipText=Probability of a trueborn person with appropriate bonuses for Naval crews. This only applies to Clan Snow Raven.
+Phenotype.NONE.text=Freeborn
+Phenotype.NONE.toolTipText=This person is freeborn
+Phenotype.GENERAL.text=General: Generation Error
+Phenotype.GENERAL.toolTipText=Error: this should never be displayed and is used for generation
+
 # ROMDesignations Enum
 ROMDesignations.NONE.text=None (Automatically Set)
 ROMDesignations.EPSILON.text=Epsilon
