Fixing phenotype/bloodname issues

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -59,10 +59,10 @@ Phenotype.PROTOMECH.groupingNameText=ProtoMech Pilot
 Phenotype.PROTOMECH.toolTipText=Probability of a trueborn person with appropriate bonuses for ProtoMech crews. Does not apply to non-clan factions, nor clans before 3060.
 Phenotype.NAVAL.text=Naval
 Phenotype.NAVAL.groupingNameText=Naval Commander
-Phenotype.NAVAL.toolTipText=Probability of a trueborn person with appropriate bonuses for Naval crews. This only applies to Clan Snow Raven.
+Phenotype.NAVAL.toolTipText=Probability of a trueborn person with appropriate bonuses for Naval crews. This only applies to Clan Snow Raven and the Outworlds Alliance.
 Phenotype.NONE.text=None
 Phenotype.NONE.toolTipText=This person is freeborn
-Phenotype.GENERAL.text=General: Display Error
+Phenotype.GENERAL.text=General
 Phenotype.GENERAL.toolTipText=Error: this should never be displayed and is used for generation
 
 # ROMDesignations Enum
