--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -373,6 +373,8 @@ lblFightChance.text=Fight:
 lblDefendChance.text=Defend:
 lblScoutChance.text=Scout:
 lblTrainingChance.text=Training:
+chkGenerateChases.text=Generate Chase Missions
+chkGenerateChases.toolTipText=If selected, AtB chase missions will be generated. Otherwise, they will be replaced with other forms of missions depending on the lance role in question.
 chkRestrictPartsByMission.text=Restrict parts by mission
 chkRestrictPartsByMission.toolTipText=The availability of parts is limited based on the mission type of the current contract.
 chkRegionalMechVariations.text=Varied weight distributions by faction
@@ -383,8 +385,8 @@ chkUseLightConditions.text=Use light conditions
 chkUseLightConditions.toolTipText=Determine light conditions when generating a scenario.
 chkUsePlanetaryConditions.text=Use planetary conditions
 chkUsePlanetaryConditions.toolTipText=Set gravity and atmosphere based on the contract location.
-chkAeroRecruitsHaveUnits.text=Treat Aero pilots like Mechwarriors
-chkAeroRecruitsHaveUnits.toolTipText=Aero pilot recruits can have fighters, and those that do will take a fighter with them when retiring/defecting.
+chkAeroRecruitsHaveUnits.text=Treat Aerospace pilots like MechWarriors
+chkAeroRecruitsHaveUnits.toolTipText=Aerospace pilot recruits can have fighters, and those that do will take a fighter with them when retiring/defecting.
 chkInstantUnitMarketDelivery.text=Instant delivery from unit market
 chkInstantUnitMarketDelivery.toolTipText=Units bought from the unit market appear in the hangar immediately rather than having to wait for delivery.
 chkUseAtBCapture.text=Random enemy capture
@@ -397,4 +399,4 @@ chkUnitMarketReportRefresh.text=Display a report when unit market refreshes
 chkAssignPortraitOnRoleChange.text=Automatically assign portrait on role change
 chkAssignPortraitOnRoleChange.toolTipText=With this enabled, a person without a portrait will automatically gain a random portrait when their primary role is switched to one of those selected below
 chkShowHistoricalDailyReport.text=Temporarily retain daily log history
-chkShowHistoricalDailyReport.toolTipText=Keeps a limited historical daily report in-memory during the gaming session.  May result in increased memory usage.
+chkShowHistoricalDailyReport.toolTipText=Keeps a limited historical daily report in-memory during the gaming session. May result in increased memory usage.
