tab properties for command center

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -130,6 +130,7 @@ jTable1.columnModel.title1=Title 2
 
 btnDeployUnits.toolTipText=Write the selected units to a MUL file and set them as deployed
 btnAdvanceDay.toolTipText=Advance forward one day.
+panCommand.TabConstraints.tabTitle=Command Center
 panHangar.TabConstraints.tabTitle=Hangar
 panRepairBay.TabConstraints.tabTitle=Repair Bay
 panSupplies.TabConstraints.tabTitle=Warehouse
