--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -260,7 +260,7 @@ panUnassignedPatient.title=Unassigned Patients
 customizeMenu.individualCamo.text=Set individual camo
 customizeMenu.removeIndividualCamo.text=Remove individual camo
 
-# For Overview Panel
+# For Command Center Panel
 scrollOverviewParts.TabConstraints.tabTitle=Parts In Use
 scrollOverviewParts.TabConstraints.toolTipText=Detailed breakdown of all parts in use by all of your assets
 scrollOverviewDragoonsRating.TabConstraints.tabTitle=Unit Rating
@@ -277,3 +277,12 @@ tabOverview.toolTipText=A general overview of the unit, includes multiple breakd
 
 bottomRating.DragoonsRating=<html><b>Dragoons Rating:</b> %s </html>
 bottomRating.CampaignOpsRating=<html><b>Campaign Ops Rating:</b> %s </html>
+
+btnGetUnit.text=Find Units
+btnGetUnit.toolTipText=Search for unit(s) to procure
+btnGetParts.text=Find Parts
+btnGetParts.toolTipText=Search for parts(s) to procure
+btnNeededParts.text=Parts Needed Report
+btnNeededParts.toolTipText=See what parts are needed for unit repairs
+btnPartsReport.text=Parts In Use Report
+btnPartsReport.toolTipText=Get overview of parts in use by units
