resources for report buttons and better sizing of command center buttons

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -286,3 +286,10 @@ btnNeededParts.text=Parts Needed Report
 btnNeededParts.toolTipText=See what parts are needed for unit repairs
 btnPartsReport.text=Parts In Use Report
 btnPartsReport.toolTipText=Get overview of parts in use by units
+panProcurement.title=Procurement Information
+btnTransportReport.text=Transport Capacity
+btnHangarOverview.text=Hangar Breakdown
+btnPersonnelOverview.text=Personnel Breakdown
+btnCargoCapacity.text=Cargo Capacity
+btnUnitRating.text=Unit Rating Details
+panReports.title=Available Reports
