--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -293,3 +293,9 @@ btnPersonnelOverview.text=Personnel Breakdown
 btnCargoCapacity.text=Cargo Capacity
 btnUnitRating.text=Unit Rating Details
 panReports.title=Available Reports
+panInfo.title=Basic Unit Information
+lblRating.text=<html><nobr><b>Unit Rating:</b></nobr></html>;
+lblCombatPersonnel.text=<html><nobr><b>Combat Personnel:</b></nobr></html>;
+lblSupportPersonnel.text=<html><nobr><b>Support Personnel:</b></nobr></html>;
+lblMissionSuccess.text=<html><nobr><b>Mission Success Rate:</b></nobr></html>;
+lblExperience.text=<html><nobr><b>Experience:</b></nobr></html>;
