border around daily log

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -299,3 +299,4 @@ lblCombatPersonnel.text=<html><nobr><b>Combat Personnel:</b></nobr></html>;
 lblSupportPersonnel.text=<html><nobr><b>Support Personnel:</b></nobr></html>;
 lblMissionSuccess.text=<html><nobr><b>Mission Success Rate:</b></nobr></html>;
 lblExperience.text=<html><nobr><b>Experience:</b></nobr></html>;
+panLog.title=Daily Activity Log
