one line for personnel

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -295,8 +295,7 @@ btnUnitRating.text=Unit Rating Details
 panReports.title=Available Reports
 panInfo.title=Basic Unit Information
 lblRating.text=<html><nobr><b>Unit Rating:</b></nobr></html>;
-lblCombatPersonnel.text=<html><nobr><b>Combat Personnel:</b></nobr></html>;
-lblSupportPersonnel.text=<html><nobr><b>Support Personnel:</b></nobr></html>;
+lblPersonnel.text=<html><nobr><b>Personnel:</b></nobr></html>;
 lblMissionSuccess.text=<html><nobr><b>Mission Success Rate:</b></nobr></html>;
 lblExperience.text=<html><nobr><b>Experience:</b></nobr></html>;
 panLog.title=Daily Activity Log
