added force composition to unit summary information in command center

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -298,4 +298,5 @@ lblRating.text=<html><nobr><b>Unit Rating:</b></nobr></html>;
 lblPersonnel.text=<html><nobr><b>Personnel:</b></nobr></html>;
 lblMissionSuccess.text=<html><nobr><b>Mission Success Rate:</b></nobr></html>;
 lblExperience.text=<html><nobr><b>Experience:</b></nobr></html>;
+lblComposition.text=<html><nobr><b>Unit Composition:</b></nobr></html>;
 panLog.title=Daily Activity Log
