--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -299,6 +299,7 @@ lblPersonnel.text=<html><nobr><b>Personnel:</b></nobr></html>;
 lblMissionSuccess.text=<html><nobr><b>Mission Success Rate:</b></nobr></html>;
 lblExperience.text=<html><nobr><b>Experience:</b></nobr></html>;
 lblComposition.text=<html><nobr><b>Unit Composition:</b></nobr></html>;
+lblRepairStatus.text=<html><nobr><b>Unit Damage Status:</b></nobr></html>;
 lblTransportCapacity.text=<html><nobr><b>Transport Capacity:</b></nobr></html>;
 lblCargoSummary.text=<html><nobr><b>Cargo Summary:</b></nobr></html>;
 panLog.title=Daily Activity Log
