unit icon for command center

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -10,6 +10,7 @@ btnSave.text=Confirm and Save as Preset
 btnLoad.text=Load a Preset
 btnCancel.text=Cancel
 lblCamo.text=Camo:
+lblIcon.text=Unit Icon:
 panRepair.TabConstraints.tabTitle=Repair and Maintenance
 panSupplies.TabConstraints.tabTitle=Supplies and Acquisition
 panTech.TabConstraints.tabTitle=Tech Limits
