--- a/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
@@ -45,4 +45,6 @@ col_salary.text=Salary
 col_kills.text=Kills
 col_origin_faction.text=Origin Faction
 col_origin_planet.text=Origin Planet
+col_recruit_date.text=Recruitment Date
+col_death_date.text=Death Date
 col_unknown.text=?
