--- a/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
@@ -47,4 +47,5 @@ col_origin_faction.text=Origin Faction
 col_origin_planet.text=Origin Planet
 col_recruit_date.text=Recruitment Date
 col_death_date.text=Death Date
+col_last_name.text=Last Name
 col_unknown.text=?
