--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -126,7 +126,7 @@ originSearchRadius.text=Random Origin Search Radius
 FamilyTab.text=Family Options
 minimumMarriageAge.text=Minimum Marital Age
 minimumMarriageAge.toolTipText=This is the minimum age that is allowed for a person to be married.
-checkMutualAncestorsDepth.text=Minimum Mutual Ancestor Depth for Marriage to be Possible
+checkMutualAncestorsDepth.text=Minimum Mutual Ancestor Check Depth for Marriage to be Possible
 checkMutualAncestorsDepth.toolTipText=This is the depth to which the ancestry of two people are checked for mutual ancestors to determine if they can marry. Set to 0 to disable the ancestry check.
 logMarriageNameChange.text=Log Marriage Name Changes
 logMarriageNameChange.toolTipText=This enables the addition of a personnel log entry whenever a name is changed during marriage.
