Adding retirement date tracking to MekHQ

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -115,6 +115,7 @@ useTimeInService.text=Track Time In Service
 timeInServiceDisplayFormat.text=Display format for Time in Service
 useTimeInRank.text=Track Time In Rank
 timeInRankDisplayFormat.text=Display format for Time in Rank
+useRetirementDateTracking.text=Track Retirement Date
 trackTotalEarnings.text=Track Total Earnings
 trackTotalEarnings.toolTipText=This tracks the total amount earned by personnel. The tracking is only done when this option is enabled, and it is not backfilled.
 showOriginFaction.text=Show Origin Faction
