--- a/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
@@ -13,6 +13,7 @@ lblArtillery.text=Artillery:
 lblBday.text=Birthdate:
 lblRecruitment.text=Recruited:
 lblLastRankChangeDate.text=Last Rank Change:
+lblRetirement.text=Retired:
 Form.title.new=Hire Personnel
 Form.title=Customize Personnel
 btnClose.text=Close
