Adding callsign generator to MekHQ

--- a/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
@@ -18,6 +18,7 @@ Form.title=Customize Personnel
 btnClose.text=Close
 btnRandomName.text=Random Name
 btnRandomBloodname.text=Random Bloodname
+btnRandomCallsign.text=Random Callsign
 scrSkills.TabConstraints.tabTitle=Skills
 scrOptions.TabConstraints.tabTitle=Abilities
 panLog.TabConstraints.tabTitle=Log
