--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -92,6 +92,8 @@ useSupportEdgeBox.text=Use Edge for Non-Combat Personnel
 useSupportEdgeBox.toolTipText=Allow non-combat personnel to use edge
 useImplantsBox.text=Allow Implants
 useImplantsBox.toolTipText=Allow personnel to have implants (e.g. Manei Domini)
+chkUnitCommanderForSkill.text=Only counts the unit commander for skills and special abilities (Unofficial)
+chkUnitCommanderForSkill.toolTipText=If checked, only the unit commander's skill, Special Abilities and Warrior Augmentations are applied to the unit. If unchecked, the unit's skill is the average of all crew member, and Special Abilities are applied to the unit only if more than a half of crews are have the same Special Abilities. Unchecked by default.
 chkCapturePrisoners.text=Capture Prisoners in Scenarios
 chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
 prisonerStatus.text=Default Prisoner Status
