Adding the ability to set the chance of having a battle by role

--- a/MekHQ/resources/mekhq/resources/AtB.properties
+++ b/MekHQ/resources/mekhq/resources/AtB.properties
@@ -8,3 +8,4 @@ AtBLanceRole.FIGHTING.text=Fight
 AtBLanceRole.DEFENCE.text=Defend
 AtBLanceRole.SCOUTING.text=Scout
 AtBLanceRole.TRAINING.text=Training
+AtBLanceRole.UNASSIGNED.text=Unassigned
