Implementing the basis of AbstractPerson

--- a/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableModel.properties
@@ -1,9 +1,12 @@
 col_rank.text=Rank
+col_first_name.text=First Name
+col_last_name.text=Last Name
+col_prenominal.text=Pre-Nominal
 col_given_name.text=Given Name
 col_surname.text=Surname
 surname_soldiers.text= soldiers)
 surname_crew.text= crew)
-col_honorific.text=Honorific
+col_postnominal.text=Post-Nominal
 col_call.text=Callsign
 col_bloodname.text=Bloodname
 col_age.text=Age
@@ -47,5 +50,4 @@ col_origin_faction.text=Origin Faction
 col_origin_planet.text=Origin Planet
 col_recruit_date.text=Recruitment Date
 col_death_date.text=Death Date
-col_last_name.text=Last Name
 col_unknown.text=?
