Implementing Status changes

--- a/MekHQ/resources/mekhq/resources/LogEntries.properties
+++ b/MekHQ/resources/mekhq/resources/LogEntries.properties
@@ -8,8 +8,11 @@ madeBondsman.text=Made Bondsman
 madePrisoner.text=Made Prisoner
 kia.text=Killed in action
 mia.text=Missing in action
+passedAway.text=Passed away from {0}
 retired.text=Retired from active duty
 recoveredMia.text=Recovered from MIA status
+resurrected.text=Resurrected
+rehired.text=Rehired
 spouseKia.text=Spouse, {0}, was killed in action
 promotedTo.text=Promoted to {0}
 demotedTo.text=Demoted to {0}
@@ -42,6 +45,9 @@ abductedFromInfirmary.text=Got abducted from the infirmary
 retiredAndTransferredFromInfirmary.text=Retired from active duty and got transferred out of the infirmary
 dismissedFromInfirmary.text=Got dismissed from the infirmary
 diedFromWounds.text=Died from {0} wounds
+diedOfNaturalCauses.text=Died of natural causes
+diedFromDisease.text=Died to disease
+diedOfOldAge.text=Died from complications related to their advanced age
 deliveredBaby.text=Delivered a healthy baby {0}!
 hasConceived.text=Has conceived
 divorcedFrom.text=Divorced from {0}
