Adding missing resources

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -191,6 +191,10 @@ PersonnelStatus.ACTIVE.text=Active
 PersonnelStatus.RETIRED.text=Retired
 PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
+PersonnelStatus.NATURAL_CAUSES.text=Died of Natural Causes
+PersonnelStatus.WOUNDS.text=Slain by Wounds
+PersonnelStatus.DISEASE.text=Died of Disease
+PersonnelStatus.OLD_AGE.text=Succumbed to Old Age
 
 # Phenotype Enum
 Phenotype.TRUEBORN=Trueborn
