--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -383,6 +383,7 @@ chkRestrictPartsByMission.toolTipText=The availability of parts is limited based
 chkRegionalMechVariations.text=Varied weight distributions by faction
 chkRegionalMechVariations.toolTipText=Use alternate weight class distributions for some factions.
 chkAttachedPlayerCamouflage.text=Player-controlled allied units use player's camouflage
+chkPlayerControlsAttachedUnits.text=All attached allied units are player controlled
 chkUseWeatherConditions.text=Use weather conditions
 chkUseWeatherConditions.toolTipText=Generate weather conditions when generating a scenario.
 chkUseLightConditions.text=Use light conditions
