--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ allprojects {
             url 'https://github.com/MegaMek/mavenrepo/raw/master'
         }
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
