--- a/MekHQ/resources/mekhq/resources/BatchXPDialog.properties
+++ b/MekHQ/resources/mekhq/resources/BatchXPDialog.properties
@@ -2,9 +2,12 @@ close.text=Close
 MassTrainingDialog.title=Mass Training
 eligible.format=%d eligible
 experience.choice.text=- Experience Level -
+rank.choice.text=- Rank -
 primaryRole.choice.text=- Primary Role -
 skill.choice.text=- Skill -
 spendXP.text=Spend XP
 targetSkillLevel.text=Target skill level:
 improvedSkills.format=Improved the %s skill of %d personnel.
 allowPrisoners.text=Allow prisoners
+onlyOfficers.text=Only officers
+noOfficers.text=No officers
