Implementing option to not save customs to XML

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -216,6 +216,7 @@ allowCanonOnlyBox.text=Only allow canon units for purchase
 allowCanonOnlyBox.toolTipText=Just what it says
 allowCanonRefitOnlyBox.text=Only allow canon variants as refits
 allowCanonRefitOnlyBox.toolTipText=Just what it says
+chkWriteCustomsToXML.text=Write Custom Units to Campaign XML
 disallowClanPartsFromIS.text=Disallow acquiring clan parts from non-Clan factions
 disallowClanPartsFromIS.toolTipText=<html>If checked, you will not be able to purchase clan parts from non-Clan factions.<br> The modifier below will be ignored.</html>
 spnPenaltyClanPartsFromIS.text=Penalty for acquiring clan parts from non-Clan factions
