Swapping over to using MekHQ options

--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -9,3 +9,5 @@ optionSaveMonthly.text=Save monthly (before month starts)
 optionSaveYearly.text=Save yearly (before year starts)
 checkSaveBeforeMissions.text=Save before attempting a mission?
 labelSavedGamesCount.text=Maximum number of auto-saved games
+labelXMLSave.text=Campaign XML Save Options
+optionWriteCustomsToXML.text=Write Custom Units to Campaign XML
