Moving ManeiDominiRank to an Enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -142,6 +142,16 @@ ManeiDominiClass.PHANTOM.text=Phantom
 ManeiDominiClass.SPECTER.text=Specter
 ManeiDominiClass.POLTERGEIST.text=Poltergeist
 
+# ManeiDominiRank Enum
+ManeiDominiRank.NONE.text=None
+ManeiDominiRank.ALPHA.text=Alpha
+ManeiDominiRank.BETA.text=Beta
+ManeiDominiRank.OMEGA.text=Omega
+ManeiDominiRank.TAU.text=Tau
+ManeiDominiRank.DELTA.text=Delta
+ManeiDominiRank.SIGMA.text=Sigma
+ManeiDominiRank.OMICRON.text=Omicron
+
 # Marriage Enum
 Marriage.NO_CHANGE.text=No Change
 Marriage.NO_CHANGE.toolTipText=Neither you nor your spouse change their surname
