--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -26,6 +26,8 @@ BabySurnameStyle.ICELANDIC_MATRONYMICS.text=Icelandic Matronymics
 BabySurnameStyle.ICELANDIC_MATRONYMICS.toolTipText=The baby will use an Icelandic matronymic surname (e.g. Gu\u00F0r\u00FAnsson, Gu\u00F0r\u00FAnd\u00F3ttir)
 BabySurnameStyle.ICELANDIC_COMBINATION_NYMICS.text=Icelandic Combined Nymics
 BabySurnameStyle.ICELANDIC_COMBINATION_NYMICS.toolTipText=The baby will use an Icelandic matronymic surname followed by an Icelandic patronymic surname, or an Icelandic matronymic surname if there is no father.
+BabySurnameStyle.RUSSIAN_PATRONYMICS.text=Russian Patronymics
+BabySurnameStyle.RUSSIAN_PATRONYMICS.toolTipText=The baby will use a basic Anglicized Russian patronymic surname (e.g. Romanovich, Romanovna, Nikolaevich, Nikolaevna), or the mother's surname if there is no father.
 
 # BodyLocation Enum
 BodyLocation.HEAD.text=Head
