--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -372,6 +372,7 @@ spnSearchRadius.toolTipText=Limit contract offers to those which are within this
 lblIntensity.text=Intensity:
 spnIntensity.toolTipText=Adjust frequency of standard battles.
 lblBattleFrequency.text=Chance of battle by role:
+btnIntensityUpdate.text=Update Intensity From Battle Roles
 chkGenerateChases.text=Generate Chase Missions
 chkGenerateChases.toolTipText=If selected, AtB chase missions will be generated. Otherwise, they will be replaced with other forms of missions depending on the lance role in question.
 chkRestrictPartsByMission.text=Restrict parts by mission
