Converting to use MekHQConstants

--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -11,3 +11,5 @@ checkSaveBeforeMissions.text=Save before attempting a mission?
 labelSavedGamesCount.text=Maximum number of auto-saved games
 labelXMLSave.text=Campaign XML Save Options
 optionWriteCustomsToXML.text=Write Custom Units to Campaign XML
+optionSaveMothballState.text=Save Unit State Before Mothballing
+optionSaveMothballState.toolTipText=This option allows you to disable saving of the unit's crew and force before being mothballed for restoration post-mothball.
