--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -1,6 +1,10 @@
 dialog.text=MekHQ Options
 okButton.text=Ok
 cancelButton.text=Cancel
+labelDisplay.text=Display Options
+labelDisplayDateFormat.text=Display Date Format
+labelLongDisplayDateFormat.text=Long Display Date Format
+invalidDateFormat.error=Invalid Date Format
 labelSavedInfo.text=Auto save options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
