--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -131,6 +131,8 @@ checkMutualAncestorsDepth.text=Minimum Mutual Ancestor Check Depth for Marriage 
 checkMutualAncestorsDepth.toolTipText=This is the depth to which the ancestry of two people are checked for mutual ancestors to determine if they can marry. Set to 0 to disable the ancestry check.
 logMarriageNameChange.text=Log Marriage Name Changes
 logMarriageNameChange.toolTipText=This enables the addition of a personnel log entry whenever a name is changed during marriage.
+useManualMarriages.text=Use Manual Marriages
+useManualMarriages.toolTipText=This allows the player to disable the Choose Spouse (Mate) option in the personnel table mouse adapter. This options is provided for performance reasons for extremely large campaigns (10k+ personnel).
 useRandomMarriages.text=Use Random Marriages (Unofficial)
 useRandomMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting members of your force.
 chanceRandomMarriages.text=Percent Chance of a Fitting Person Finding a Spouse per Day
