Report missing standard bin (which shouldn't happen) instead of throwing NPE.

--- a/MekHQ/resources/mekhq/resources/SmallSVAmmoSwapDialog.properties
+++ b/MekHQ/resources/mekhq/resources/SmallSVAmmoSwapDialog.properties
@@ -3,3 +3,4 @@ cancel=Cancel
 shotsPerClip.format=Shots per clip: %d
 standard=Standard:
 inferno=Inferno:
+noStandardBin=Configuration error: No bin found for standard ammo
