Moving the Misc Tab to MekHQOptions instead

--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -5,6 +5,8 @@ labelDisplay.text=Display Options
 labelDisplayDateFormat.text=Display Date Format
 labelLongDisplayDateFormat.text=Long Display Date Format
 invalidDateFormat.error=Invalid Date Format
+optionHistoricalDailyLog.text=Temporarily retain daily log history
+optionHistoricalDailyLog.toolTipText=Keeps a limited historical daily report in-memory during the gaming session. May result in increased memory usage.
 labelSavedInfo.text=Auto save options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
