Adding Option for Unit Market instead of unit selector in CommandCenterTab

--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -5,7 +5,10 @@ labelDisplay.text=Display Options
 labelDisplayDateFormat.text=Display Date Format
 labelLongDisplayDateFormat.text=Long Display Date Format
 invalidDateFormat.error=Invalid Date Format
-labelSavedInfo.text=Auto save options
+labelCommandCenterDisplay.text=Command Center Display Options
+optionCommandCenterUseUnitMarket.text=Get Unit Links to Unit Market (if enabled)
+optionCommandCenterUseUnitMarket.toolTipText=The Get Unit button on the Command Center will link to the Unit Market provided the Unit Market is enabled.
+labelSavedInfo.text=Autosave options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
 optionSaveWeekly.text=Save weekly (before week starts)
