--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -8,6 +8,8 @@ invalidDateFormat.error=Invalid Date Format
 labelCommandCenterDisplay.text=Command Center Display Options
 optionCommandCenterUseUnitMarket.text=Get Unit Links to Unit Market (if enabled)
 optionCommandCenterUseUnitMarket.toolTipText=The Get Unit button on the Command Center will link to the Unit Market provided the Unit Market is enabled.
+optionCommandCenterMRMS.text=Command Center Mass Repair/Mass Salvage Button
+optionCommandCenterMRMS.toolTipText=This adds a button to launch the Mass Repair/Mass Salvage Dialog and a second to run it using current settings to the Command Center Tab
 labelSavedInfo.text=Autosave options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
